--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: #1f2227;
+    background-color: #1f2227;
     color: white;
     font-family: "Montserrat", sans-serif;
 }
